Fix crash in rating widget.

Thanks for the hint.

BUG: 232628

svn path=/trunk/extragear/graphics/digikam/; revision=1109177